# pgtool

./: .gitignore  LICENSE  README.md  pyproject.toml
migrations/mydb/: 2024-04-02-13-51-28-create-tests-table.py
pgtool/: database_bootstrapper.py  migrator.py  new_migration.py  prepare_database.py  utilities.py
